Reconfigured with Updated Build Settings

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | DemoPackages</title>
+    <title>Unity WebGL Player | The Road Not Taken</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">DemoPackages</div>
+        <div id="unity-build-title">The Road Not Taken</div>
       </div>
     </div>
     <script>
@@ -59,12 +59,12 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/the-road-not-taken.loader.js";
       var config = {
-        dataUrl: buildUrl + "/the-road-not-taken.data.gz",
-        frameworkUrl: buildUrl + "/the-road-not-taken.framework.js.gz",
-        codeUrl: buildUrl + "/the-road-not-taken.wasm.gz",
+        dataUrl: buildUrl + "/the-road-not-taken.data",
+        frameworkUrl: buildUrl + "/the-road-not-taken.framework.js",
+        codeUrl: buildUrl + "/the-road-not-taken.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "UnityAssetCollection",
-        productName: "DemoPackages",
+        companyName: "Farhan",
+        productName: "The Road Not Taken",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
