--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
           <div id="unity-progress-bar-full"></div>
         </div>
       </div>
+      <div id="unity-warning"> </div>
+      <div id="unity-footer">
+        <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">Hope</div>
       </div>
     </div>
     <script>
@@ -53,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/the-road-not-taken.loader.js";
+      var loaderUrl = buildUrl + "/build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/the-road-not-taken.data",
-        frameworkUrl: buildUrl + "/the-road-not-taken.framework.js",
-        codeUrl: buildUrl + "/the-road-not-taken.wasm",
+        dataUrl: buildUrl + "/build.data",
+        frameworkUrl: buildUrl + "/build.framework.js",
+        codeUrl: buildUrl + "/build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Farhan _ Karma",
         productName: "Hope",
