--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/build.loader.js";
+      var loaderUrl = buildUrl + "/the-road-not-taken.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build.data",
-        frameworkUrl: buildUrl + "/build.framework.js",
-        codeUrl: buildUrl + "/build.wasm",
+        dataUrl: buildUrl + "/the-road-not-taken.data",
+        frameworkUrl: buildUrl + "/the-road-not-taken.framework.js",
+        codeUrl: buildUrl + "/the-road-not-taken.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Farhan _ Karma",
         productName: "Hope",
